# ummap-io-v2

./: .gitignore  Authors.md  CMakeLists.txt  Doxyfile  NOTICE  README.md  configure  options
bench/: CMakeLists.txt
bench/mero_examples/: CMakeLists.txt  mero_ressource_file.rc
bench/mero_examples/big_ios/: big_ios.c
bench/mero_examples/hello_world/: mero_example.c  motr_example.c
cip/: Jenkinsfile  job.params  sonar-project.properties  workflow.yml
cmake/: FindHtopml.cmake  FindIocClient.cmake  macros.cmake  unittest-macros.cmake
dev/: gen-coverage.sh
doc/: concepts.md  dev-steps.md  issues.md
doc/images/: uml.dot
examples/: CMakeLists.txt  basic.cpp  copy.cpp  cow-perf-example.c  cow-switch-semantic.c  main-policy-vs-swap-mpi.c  quota-inter-process.cpp  quota.cpp  slow.cpp  stress.cpp  switch-perf-example.c
extern-deps/: CMakeLists.txt
extern-deps/from-cern-lhcb-daqpipe-v2/: Debug.cpp  Debug.hpp
extern-deps/from-cern-lhcb-daqpipe-v2/tests/: CMakeLists.txt
extern-deps/from-clovis-sample-apps/: CMakeLists.txt
extern-deps/from-motr-sample-apps/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in
src/common/: CMakeLists.txt  Debug.hpp  Debuh.hpp  HumanUnits.cpp  HumanUnits.hpp  ListElement.cpp  ListElement.hpp  URI.cpp  URI.hpp
src/common/tests/: CMakeLists.txt  TestHumanUnits.cpp  TestListElement.cpp  TestURI.cpp
src/core/: CMakeLists.txt  Driver.cpp  Driver.hpp  GMockMapping.hpp  GlobalHandler.cpp  GlobalHandler.hpp  Listings.hpp  Mapping.cpp  Mapping.hpp  MappingRegistry.cpp  MappingRegistry.hpp  Policy.cpp  Policy.hpp  PolicyQuota.cpp  PolicyQuota.hpp  PolicyQuotaInterProc.cpp  PolicyQuotaInterProc.hpp  PolicyQuotaLocal.cpp  PolicyQuotaLocal.hpp  PolicyRegistry.cpp  PolicyRegistry.hpp  Registry.cpp  Registry.hpp  UriHandler.cpp  UriHandler.hpp
src/core/tests/: CMakeLists.txt  TestGlobalHandler.cpp  TestMapping.cpp  TestMappingRegistry.cpp  TestPolicy.cpp  TestPolicyQuotaInterProc.cpp  TestPolicyQuotaLocal.cpp  TestPolicyRegistry.cpp  TestRegistry.cpp  TestUriHandler.cpp
src/drivers/: CDriver.cpp  CDriver.hpp  CMakeLists.txt  ClovisDriver.cpp  ClovisDriver.hpp  DummyDriver.cpp  DummyDriver.hpp  FDDriver.cpp  FDDriver.hpp  GMockDriver.hpp  IocDriver.cpp  IocDriver.hpp  MemoryDriver.cpp  MemoryDriver.hpp  MmapDriver.cpp  MmapDriver.hpp
src/drivers/tests/: CMakeLists.txt  TestCDriver.cpp  TestDummyDriver.cpp  TestFDDriver.cpp  TestMemoryDriver.cpp  TestMmapDriver.cpp
src/htopml/: CMakeLists.txt  HtopmlMappings.cpp  HtopmlMappings.hpp
src/htopml/www/: mappings.css  mappings.html  mappings.js
src/policies/: CMakeLists.txt  FifoPolicy.cpp  FifoPolicy.hpp  FifoWindowPolicy.cpp  FifoWindowPolicy.hpp  GMockPolicy.hpp  LifoPolicy.cpp  LifoPolicy.hpp
src/policies/tests/: CMakeLists.txt  TestFifoPolicy.cpp  TestFifoWindowPolicy.cpp  TestLifoPolicy.cpp
src/portability/: CMakeLists.txt  OS.hpp  Spinlock.hpp  SpinlockApple.hpp  SpinlockPthread.hpp  UnixOS.cpp  UnixOS.hpp
src/portability/tests/: CMakeLists.txt  TestOS.cpp
src/public-api/: CMakeLists.txt  clovis_api.c  clovis_api.h  ummap.cpp  ummap.h
src/public-api/tests/: CMakeLists.txt  TestPublicAPI.cpp
src/rw-wrapper/: CMakeLists.txt  rw-wrapper.cpp
src/rw-wrapper/tests/: CMakeLists.txt  TestRwWrapper.cpp
src/uri/: CMakeLists.txt  IocRessource.cpp  IocRessource.hpp  Listings.cpp  Listings.hpp  MeroRessource.cpp  MeroRessource.hpp  RessourceHandler.cpp  RessourceHandler.hpp  URI.cpp  Uri.cpp  Uri.hpp  UriHandler.cpp  UriHandler.hpp
src/uri/tests/: CMakeLists.txt  TestListings.cpp  TestRessourceHandler.cpp  TestURI.cpp  TestUri.cpp  TestUriHandler.cpp
